
==== version history of distribution Log::Report

Unless noted otherwise, these changes where initiated and applied by
Mark Overmeer.

TODO:
	. connect to Message::Passing framework

version 1.38:

	Fixes:
	- Require Dancer2 >= 0.207 for test [cpantesters], [GitHub issue #13]

version 1.37: Fri 28 Jun 11:08:19 CEST 2024

	Fixes:
	- Work with Dancer2 change to send_as [Andy Beverley]

version 1.36: Fri 27 Oct 15:05:13 CEST 2023

	Fixes:
	- Adapt test to new Dancer2 numbering scheme. [Petr Pisar]

version 1.35: Fri 27 Oct 08:27:54 CEST 2023

	Fixes:
	- Try blocks will always capture fatal messages, even when not
	  in the 'accept'-set. [Andy Beverley]
	- Adapt to new Dancer2 numbering scheme. [Tom Hukins]

	Improvements:
	- Dancer2 process() will warn when used incorrectly. [Andy Beverley]

version 1.34: Thu 15 Sep 09:43:40 CEST 2022

	Fixes:
	- ::Exception::isFatal() did not respect the is_fatal overrule.
	  Spotted by [Andy Berverley]

version 1.33: Sat Jul 17 10:56:52 CEST 2021

	Changes:
	- the $@->died with always return the original die causing object or
	  string.  In most cases, you want to use $@->wasFatal, which is the
	  translated (hence compatible) ::Exception object.  [Andy Beverley]

version 1.32: Tue 26 Jan 09:13:31 CET 2021

	Fixes:
	- ::Dancer2, use correct VERSION, github issue#3
	- ::Dancer2, fix stacktrace sent to browser with show_errors disabled
	  by [Andy Beverley], github issue#7
	  
version 1.31: Fri 15 Jan 16:35:39 CET 2021

	Fixes:
	- another attempt on issue #6, exceptions with specific destination
	  are not caught by ::Try
	- previous release broke ::Try::hide() [Andy Beverley]

version 1.30: Fri 15 Jan 12:46:14 CET 2021

	Fixes:
	- recursive errors when file cannot be written for ::File dispatcher
	  github issue#4 [Tom Hukins]
	- exceptions with specific destination are not caught by ::Try
	  github issue#6 [Andy Beverley]
	- redirected exception messages forget their explicit dispatcher
	  destination.  Github issue#6
